--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
   my-app:
     image: kaynecherem/tempconverter:dev
     restart: always
+    expose:
+      - "5000"
     ports:
       - "5000:5000"
     env_file:
